wip - 왜 객체지향은 객체를 지향하나?

--- a/bookreport/객체지향의사실과오해.md
+++ b/bookreport/객체지향의사실과오해.md
@@ -1,4 +1,4 @@
-# 그래서 왜 객체를 지향해야 한다고? [객체지향의 사실과 오해 정리 및 서평]
+# 그래서 왜 객체를 지향해야 한다고? 한 장으로 끝내는 객체지향 총정리[객체지향의 사실과 오해 정리 및 서평]
 
 ## Introduction
 
@@ -16,4 +16,18 @@
 
 본격적으로 책의 내용에 대해 언급하기 앞서, 개인적인 소견으로 이 책은 되도록이면 실무 코드(그것도 레거시면 레거시일수록 오히려 좋다)를 접해본 사람이 읽는 것을 추천한다. 물론 그냥 읽어도 좋은 책이다. 하지만 이 책은 "아, 이래서 이렇게 짜야되는 거였구나!"하고 무릎을 때리면서 행간에 코드를 떠올릴 수 있을 때 훨씬 와닿지 않을까 싶다. 타산지석이라고, 좋은 코드만 봐서는 이 책의 진정한 묘미를 알기 힘들 것이다.
 
+## 왜 객체지향은 객체를 지향하는 것일까?
 
+책의 서두를 보면 카페 속 손님 - 캐셔 - 바리스타의 예시를 보여주며 역할과 책임, 그리고 협력이 객체지향의 본질이라고 서술한다. 간단히 요약하면 아래와 같다.
+
+- 카페 세상 속 객체는 손님, 캐셔, 바리스타라는 역할을 맡는다. 
+- 이들은 서로 간의 협력을 통해 카페라는 하나의 비즈니스가 원활하게 돌아가도록 일을 수행한다. 
+- 이때, 이 각 객체는 역할에 맞는 특정한 책임을 진다. 현실 세상과 달리 객체 세상 속 객체들은 모두가 자율적으로 행동을 통해 자신의 상태를 바꾼다. 어느 누구도 다른 객체의 상태를 직접 변경할 수 없으며, 메시지를 전달해 상대가 자신의 상태를 직접 바꾸도록 한다.
+
+이렇게 "적절한 책임을 수행하는 역할 간의 유연하고 견고한 협력 관계를 구축하는 것이 객체지향의 핵심"이며 이를 통해 "단순히 실세계를 소프트웨어 안에 담는 것이 아니라 고객과 사용자를 만족시킬 수 있는 신세계를 창조하는 것이 객체지향의 목표"라고 한다. 
+
+근데 왜? 왜 이렇게 하는 게 좋은 걸까? 사실 위의 객체지향에 대한 설명은 무엇이다라는 what이 있을 뿐, 근본적으로 왜 이렇게 만드는 게 좋은지에 대한 why가 없다. 위에서도 언급했듯 객체지향적이지 않은 코드를 보면 보다 명확히 이해되겠지만, 이 책에서만큼은 그게 핵심이 아니다.
+
+추상화
+
+은유
