--- a/hellojpa/src/main/java/ReadMe/ch3/영속성관리.md
+++ b/hellojpa/src/main/java/ReadMe/ch3/영속성관리.md
@@ -62,4 +62,37 @@ EntityManager.persist(entity);
     // 객체를 저장한 상태(영속)
     em.persist(member);
     ```
+  - 이때 주의점: 위에서도 얘기했듯, 엔티티를 영속 상태에 등록한다고 DB에 저장되는 게 아니다. 아래 코드를 보자.
+
+  ```java
+  ...
+  Member member = new Member();
+  member.setId("member1);
+  member.setUsername("회원1");
+  
+  EntityManager em = emf.createEntityManager();
+  em.getTransaction().begin(); // 트랜잭션 시작
+  
+  // 객체를 저장한 상태(영속)
+  System.out.println("===Before===");
+  em.persist(member);
+  System.out.println("===After===");
+  tx.commit();
+  ```
+
+  위의 코드를 실행하면 아래와 같이 출력된다.
+  
+  ```java
+  ===Before===
+  ===After===
+  Insert ...(Insert 쿼리)
+  ```
+  보다시피 insert 쿼리가 em.persist() 시점에 나가는 게 아니라 트랜잭션이 커밋되는 시점에 나간다.
   ![img_3.png](img_3.png)
+- 준영속 상태
+  - 이미 영속성 컨텍스트에 등록된(=영속 상태) 엔티티를 컨텍스트에서 분리했을 때의 상태를 말한다. 분리하게 될 경우, 해당 엔티티는 더이상 영속성 컨텍스트에서 관리되지 않는다.
+  - 구현 방식은 `em.detach()` 메소드를 호출함으로써 이뤄진다.
+- 삭제
+  - 엔티티를 삭제한 상태를 말한다. 이 경우 DB에서도 해당 엔티티가 삭제된다. `em.remove()` 메소드를 호출하면 해당 엔티티가 삭제된다.
+
+## 영속성 컨텍스트의 이점
