--- a/hellojpa/src/main/java/ReadMe/ch3/영속성관리.md
+++ b/hellojpa/src/main/java/ReadMe/ch3/영속성관리.md
@@ -96,3 +96,140 @@ EntityManager.persist(entity);
   - 엔티티를 삭제한 상태를 말한다. 이 경우 DB에서도 해당 엔티티가 삭제된다. `em.remove()` 메소드를 호출하면 해당 엔티티가 삭제된다.
 
 ## 영속성 컨텍스트의 이점
+
+DB에 대한 캐시를 서버에 둔다는 개념은 알겠는데 이게 정확히 어떤 이점이 있는지에 대해 짚고 넘어가야 할 필요가 있다.
+
+### 1차 캐시
+
+영속성 컨텍스트가 1차 캐시 역할을 한다. 그러면 어떻게 되는 거지? 아래와 같이 엔티티를 생성하고 해당 엔티티를 영속화했다고 해보자.
+```java
+// 엔티티 생성 (비영속)
+Member member = new Member();
+member.serId("member1");
+member.setUsername("회원1");
+
+// 엔티티를 영속성 컨텍스트에 등록(영속) -> 1차 캐시에 저장된다.
+em.persist(member);
+
+//1차 캐시에서 조회
+Member findMember = em.find(Member.class, "member1");
+```
+원래 해당 엔티티를 조회하려면 DB에서 데이터를 가져와야 한다. 그런데 JPA의 영속성 컨텍스트는 그 자체로 캐시 역할을 한다. 즉, 영속성 컨텍스트에 영속화시키면 그때부터 캐시에 저장되며, 엔티티를 조회하면 가장 먼저 영속성 컨텍스트부터 들러서 해당 엔티티가 있는지를 찾는다. 있다면 굳이 DB에 접근할 것 없이 바로 캐시에서 엔티티를 가져온다. 따라서 네트워크 리소스가 줄어든다는 장점이 있다.
+
+![img_4.png](img_4.png)
+
+만약 영속성 컨텍스트에 등록되지 않은 엔티티를 조회하면 어떻게 될까? 
+```java
+Member findMember2 = em.find(Member.class, "member2");
+```
+
+당연히 캐시에 없으니 DB에서 조회할 것이다. 이때는 쿼리가 날아간다.
+
+결과적으로 특정 엔티티를 조회할 때 영속성 컨텍스트(1차 캐시)에 등록되어 있다면 DB에 접근하지 않고 영속 컨텍스트로부터 엔티티를 반환받는다. 그렇지 않다면 DB에서 해당 데이터를 조회한 뒤, 1차 캐시에 저장한다.
+
+![img_5.png](img_5.png)
+
+하지만 큰 반전..사실 이게 큰 도움은 되지 않는다고 한다. 왜냐, 앞서 배웠던 엔티티 매니저 팩토리와 엔티티 매니저 도식을 보자.
+
+![](img.png)
+
+엔티티 매니저 팩토리는 서버 애플리케이션의 런타임 동안 계속 살아있는 반면, 엔티티 매니저는 한 사용자의 요청이 있을 때마다 새로 생성되고 요청이 끝나면 소멸된다. 위에서 다뤘던 1차 캐시 개념은 한 트랜잭션 단위 안에서만 유효하다. 따라서 한 트랜잭션 내에서 여러번 동일한 엔티티를 호출할 경우에나 1차 캐시에 대한 효과가 있는 것이지, 서로 다른 사용자 요청에 대해 캐시 개념이 적용되지는 않는다는 것.
+
+서버 애플리케이션 전체에서 다루는 캐시는 2차 캐시라고 따로 있긴 한데(이건 나중에 다룰 듯) 위의 1차 캐시 개념은 한 트랜잭션 내에서만 유효하다는 것을 기억하자. 따라서 큰 성능의 이점은 있지는 않더라..는 것.
+실제 코드로 확인해보자. 아래와 같이 코드를 짠 뒤, 실행한다.
+
+```java
+        try {
+            // 영속
+
+            Member member = new Member();
+            member.setUserName("member1");
+
+            System.out.println("===Before===");
+            em.persist(member);
+            System.out.println("===After===");
+
+            Member findMember = em.find(Member.class, member.getId());
+            Member findMember2 = em.find(Member.class, 102L);
+
+            System.out.println("findMember.id = " + findMember.getId());
+            System.out.println("findMember.username = " + findMember.getusername());
+            tx.commit();
+        } catch (Exception e) {
+            tx.rollback();
+        } finally {
+            em.close();
+        }
+```
+![img_6.png](img_6.png)
+보다시피 member 객체를 영속화하고 해당 객체를 조회할 때까지도 insert 쿼리는 물론이요 select 쿼리도 전혀 나가지 않는다. 전부 다 애플리케이션 내 캐시에 저장하고 조회하기 때문. 맨 마지막에 트랜잭션이 커밋되고 나서야 Insert 쿼리가 날아간다.
+
+
+
+이번에는 두 개의 member 객체를 조회하되 하나는 영속 상태를, 하나는 생전 처음 보는 애를 조회해보자.
+```java
+try {
+            // 영속
+
+            Member member = new Member();
+            member.setUserName("member1");
+
+            System.out.println("===Before===");
+            em.persist(member);
+            System.out.println("===After===");
+
+            Member findMember = em.find(Member.class, member.getId());
+            Member findMember2 = em.find(Member.class, 102L);
+            
+            tx.commit();
+        } catch (Exception e) {
+            tx.rollback();
+        } finally {
+            em.close();
+        }
+```
+결과는 아래와 같다. select 쿼리가 하나만 호출되는 것을 볼 수 있는데, 이는 영속 상태가 아닌 findMember2 객체를 조회하는 쿼리에 해당한다. 그러고 나서 아까와 동일하게 트랜잭션 커밋 시점에 영속 상태의 member를 DB와 동기화하는 작업이 이뤄진다.
+
+![img_7.png](img_7.png)
+
+
+### 동일성(Identity) 보장
+
+[지난 글](https://woonys.tistory.com/entry/JPA%EC%99%80-%EB%AA%A8%EB%8D%98-%EC%9E%90%EB%B0%94-%EB%8D%B0%EC%9D%B4%ED%84%B0-%EC%A0%80%EC%9E%A5-%EA%B8%B0%EC%88%A0-%EC%9E%90%EB%B0%94-ORM-%ED%91%9C%EC%A4%80-JPA-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-%EA%B8%B0%EB%B3%B8%ED%8E%B8-%EA%B0%95%EC%9D%98-1)에서 얘기했듯, JPA를 사용하면 엔티티의 동일성을 보장해준다고 했다. 이를 구현하는 방식이 바로 영속성 컨텍스트에 있다. 아래 코드를 보자. 동일한 엔티티를 호출하는 두 객체가 같은지 아닌지를 비교하는 코드이다.
+
+```java
+try {
+            // 영속
+
+            Member member = new Member();
+            member.setUserName("member1");
+            
+            em.persist(member);
+
+
+            Member findMember1 = em.find(Member.class, member.getId());
+            Member findMember2 = em.find(Member.class, member.getId());
+            System.out.println("result = " + (findMember1 == findMember2));
+            tx.commit();
+        } catch (Exception e) {
+            tx.rollback();
+        } finally {
+            em.close();
+        }
+```
+결과는 아래와 같이 true인 것을 볼 수 있다.
+![img_8.png](img_8.png)
+
+이처럼 "1차 캐시로 반복 가능한 읽기(REPEATABLE READ) 등급의 트랜잭션 격리 수준을 DB가 아닌 애플리케이션 차원에서 제공한다"고 나와있는데, 여기서 트랜잭션 격리 수준은 [이전 글](https://woonys.tistory.com/entry/Transactional%EC%9D%80-%EB%A7%8C%EB%8A%A5%EC%9D%B4-%EC%95%84%EB%8B%99%EB%8B%88%EB%8B%A4-2-%ED%8A%B8%EB%9E%9C%EC%9E%AD%EC%85%98%EC%9D%98-%EA%B2%A9%EB%A6%AC%EC%84%B1%EA%B3%BC-lock)에서도 짧게 다룬 바 있긴 하나 자세하게는 다음에 다루도록 하자. 
+
+### 트랜잭션을 지원하는 쓰기 지연
+
+쓰기 지연은 이전에도 봤던 것처럼 persist() 메소드를 호출했을 때 바로 DB에 쿼리를 날리지 않는다. 계속해서 영속 컨텍스트에 엔티티를 모아뒀다가 트랜잭션 커밋하는 순간, 한 번에 Insert 쿼리를 방출한다. 일종의 버퍼와 같은 개념.
+
+![img_9.png](img_9.png)
+
+위 그림에서도 볼 수 있듯, 단순히 엔티티를 1차 캐시에 저장만 하는 게 아니라 해당 엔티티를 저장하는 SQL 문을 미리 생성하고 이를 쓰기 지연 SQL 저장소에 저장하는 게 특징이다. SQL문을 엔티티와 같이 차곡차곡 쌓아뒀다가 트랜잭션 커밋 시점에 한 번에 DB로 쿼리를 날리는 개념.
+
+
+- 변경 감지(Dirty Checking)
+- 지연 로딩(Lazy Loading)
