--- a/hellojpa/src/main/java/ReadMe/ch3/영속성관리.md
+++ b/hellojpa/src/main/java/ReadMe/ch3/영속성관리.md
@@ -228,8 +228,74 @@ try {
 
 ![img_9.png](img_9.png)
 
-위 그림에서도 볼 수 있듯, 단순히 엔티티를 1차 캐시에 저장만 하는 게 아니라 해당 엔티티를 저장하는 SQL 문을 미리 생성하고 이를 쓰기 지연 SQL 저장소에 저장하는 게 특징이다. SQL문을 엔티티와 같이 차곡차곡 쌓아뒀다가 트랜잭션 커밋 시점에 한 번에 DB로 쿼리를 날리는 개념.
+위 그림에서도 볼 수 있듯, 단순히 엔티티를 1차 캐시에 저장만 하는 게 아니라 해당 엔티티를 저장하는 SQL 문을 미리 생성하고 이를 쓰기 지연 SQL 저장소에 저장하는 게 쓰기 지연의 특징이다. 
+
+SQL문을 엔티티와 같이 차곡차곡 쌓아뒀다가 트랜잭션 커밋 시점에 한 번에 DB로 쿼리를 날리는 개념. 이미 우리는 위에서 코드를 통해 트랜잭션 커밋 시점에 Insert 쿼리가 날아가는 것을 확인했다. 이를 도식화하면 아래 이미지와 같다. `transaction.commit()`을 호출하면 먼저 SQL 쿼리가 DB로 날아가는데 이를 flush라고 한다. 이어서 저장이 끝나면 commit이 이뤄진다. 
+
+![img_10.png](img_10.png)
+
+이때, 쿼리는 JPA를 쓰기만 한다고 늘 모아서 쿼리를 한 방에 날리는 것은 아니고 hibernate 환경설정에서 JDBC Batch size를 설정해야 한다. 아래와 같이 batch size 설정을 추가하면 해당 사이즈에 맞게 쿼리를 모았다가 한 번에 내보낸다.
+
+```xml
+// persistence.xml
+...
+<property name="hibernate.jdbc.batch_size" value="10" />
+...
+```
+
+### 변경 감지(Dirty Checking)
+
+변경 감지는 영속성 컨텍스트에서 관리하고 있는 엔티티에 변경이 일어났을 때 JPA가 이를 인지하고 알아서 변경 쿼리를 날려주는 기능을 말한다. 예제 코드를 보자.
+
+```java
+try {
+            // 영속
+
+            Member member = em.find(Member.class, 150L);
+            member.setUserName("ZZZZZ"); // 엔티티 내 필드값 변경
+            
+            // em.persist(member); -> persist 호출해야 할까?
+            
+            tx.commit();
+        } catch (Exception e) {
+            tx.rollback();
+        } finally {
+            em.close();
+        }
+```
+
+여기서 가장 헷갈리는 부분이 하나 있다. 바로 "JPA가 변경을 감지하게 하려면 `persist()`를 호출해야 하나요?"이다. 결론부터 말하면 `persist()`는 호출하지 않아도 된다. `persist()`는 비영속 상태의 엔티티를 영속 상태로 등록하는 메소드이다. 이미 영속 상태에 등록된 엔티티는 JPA가 알아서 관리하기 때문에 `persist()`는 호출할 필요가 없다. 오히려 전혀 의미없는 코드를 쓰는 행위다. 이미 등록한 엔티티인데 다시 등록하려 하니까.
+
+그러면 JPA가 내부에서 어떻게 동작하는지 살펴보자.
+
+![img_11.png](img_11.png)
+
+위 이미지는 트랜잭션 커밋 시점이다. 커밋 시점에 가장 먼저 flush() 메소드를 호출한다. 이어서 현재 엔티티와 스냅샷을 비교한다. 여기서 스냅샷은 영속 상태로 등록한 최초 시점의 엔티티를 저장해놓은 정보이다. 즉, 영속 상태로 등록한 시점의 과거 엔티티 정보와 현재 엔티티 사이에 무엇이 달라졌는지를 체크하는 것. 비교해서 멤버가 바뀌었다? 그러면 UPDATE 문을 생성해 쓰기 지연 저장소에 저장해둔다. 이어서 DB에 쿼리를 날려 변경 정보를 저장하는 식.
+
+위에서 미처 얘기하지 못한 개념이 하나 있다. 플러시는 대체 뭐지?
+
+### 플러시(Flush)
+
+플러시란 영속성 컨텍스트의 변경 내용을 데이터베이스에 반영하는 행위를 말한다. 즉, 위에서 트랜잭션 커밋 시점에 가장 먼저 flush() 메소드를 호출한다 했는데, 이는 엔티티 변경 정보를 DB에 반영하라는 메소드를 뜻한다.
+
+플러시가 일어나는 과정을 보자. 아래 세 단계를 통해 영속성 컨텍스트의 내용을 데이터베이스와 동기화한다.
+
+- JPA가 엔티티에 변경이 일어났음을 감지한다(Dirty Checking).
+- 수정된 엔티티에 대한 UPDATE 쿼리를 쓰기 지연 SQL 저장소에 등록한다.
+- 쓰기 지연 SQL 저장소의 쿼리를 데이터베이스에 전송한다. 이는 수정뿐만 아니라 등록, 삭제 쿼리 역시 마찬가지다.
+
+이때 주의해야 할 점: 플러시가 일어났다고 트랜잭션이 커밋되는 게 아니다. 플러시가 끝나고 트랜잭션 커밋이 호출되어야 커밋이 이뤄지는 것.
+
+영속성 컨텍스트를 플러시하는 방법에는 크게 세 가지가 있다.
+
+- em.flush() - 플러시를 직접 호출 -> 직접 호출하는 케이스는 거의 없다고 보면 된다.
+- 트랜잭션 커밋 - 플러시가 자동 호출 -> 이 경우가 가장 많음.
+- JPQL 쿼리 실행 - 플러시 자동 호출 -> JPQL 쿼리를 날리면 이 역시 플러시가 자동 호출된다.
+
+참고로 하나 더 알아둬야 할 점으로는, `플러시는 영속성 컨텍스트를 비우지 않는다`는 것이다. flush라는 어감이 뭔가 영속성 컨텍스트 내용을 DB로 옮기면서 비우는 것 같은 느낌을 주는데, 실상은 ctrl+C / ctrl+V이지 ctrl+X가 아닌 것(맥북 써서 ctrl이 어색하네..)
+
+영속성 컨텍스트의 변경 내용을 DB와 동기화하는 것이지, 영속성 컨텍스트는 비우고 DB에만 남기는 게 아니라는 걸 명심하자.
 
 
-- 변경 감지(Dirty Checking)
-- 지연 로딩(Lazy Loading)
+### 지연 로딩(Lazy Loading)
+
