엔티티 매핑 - 객체와 테이블 매핑

--- a/hellojpa/src/main/java/ReadMe/ch4/엔티티매핑.md
+++ b/hellojpa/src/main/java/ReadMe/ch4/엔티티매핑.md
@@ -1,8 +1,94 @@
 # 엔티티 매핑
 
-이번 챕터에서는 엔티티 매핑에 대해 알아본다. 엔티티 매핑은 말 그대로 엔티티 객체와 JPA를 매핑하는 것을 말하는데, 구체적으로 아래와 같은 개념을 이해해야 한다.
+이번 챕터에서는 엔티티 매핑에 대해 알아본다. 엔티티 매핑은 말 그대로 애플리케이션에서 다루는 엔티티와 DB 사이를 JPA를 기반으로 매핑하는 것을 말하는데, 구체적으로 아래와 같은 개념을 이해해야 한다.
 
 - 객체와 테이블 매핑: `@Entity`, `@Table`
 - 필드와 컬럼 매핑: `@Column`
 - 기본 키 매핑: `@Id`
 - 연관관계 매핑: `@ManyToOne`, `@JoinColumn`
+
+## 객체와 테이블 매핑
+
+### `@Entity`
+엔티티란 도메인 객체를 일컫는 말로, 클래스에 `@Entity` 어노테이션을 붙이면 JPA가 해당 클래스를 관리할 수 있게 된다. 따라서 JPA를 사용해서 테이블과 매핑할 클래스라면 반드시 `@Entity` 어노테이션이 붙어야 한다.
+
+클래스에 `@Entity`를 붙이면 몇 가지 주의할 점이 더 있는데
+- 엔티티 클래스에 기본 생성자가 반드시 들어가야 한다(파라미터가 없는 public 또는 protected 생성)
+
+예컨대 Member 클래스에 `@Entity`를 붙였다고 해보자. 그러면 아래처럼 기본 생성자가 반드시 들어가야 한다. 이는 JPA 스펙상 규정된 것이다. 리플렉션이나 프록시와 같은 기술을 쓸 때 필요한 것인데 이정도로만 알아두자.
+
+```java
+@Entity // 
+public class Member {
+    ...
+    // 기본 생성자
+    public Member() {
+    }
+    ...
+}
+```
+그 외에도
+- final 클래스를 비롯해 enum, interface, inner 클래스에 `@Entity` 어노테이션을 사용할 수 없다.
+- 저장할 필드에 final을 사용할 수 없다.
+
+### `@Table`
+`@Table`은 클래스에 붙이는 어노테이션으로, 엔티티와 매핑할 테이블을 지정한다. 만약 데이터베이스 테이블명과 클래스 이름이 다를 수 있기 때문에 구체적으로 어떤 테이블에 매핑할 것인지를 지칭하는 어노테이션이다.
+
+```java
+@Entity
+@Table(name = "member")
+public class Member {
+    ...
+    // 기본 생성자
+    public Member() {
+    }
+    ...
+}
+```
+
+바로 테스트해보자. 아래와 같은 코드의 엔티티 클래스가 있다.
+```java
+@Entity
+public class Member {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "MEMBER_ID")
+    private Long id;
+
+    @Column(name = "name")
+    private String name;
+
+    @Column(name = "city")
+    private String city;
+
+    @Column(name = "street")
+    private String street;
+
+    @Column(name = "zipcode")
+    private String zipCode;
+    
+    public Member() {
+    }
+}
+```
+
+여기에 @Table 어노테이션을 붙이지 않은 채 테이블을 생성하면 아래와 같이 엔티티 클래스명과 같은 이름의 테이블이 생성된다.
+
+![](../../../../../../../../스크린샷 2023-01-15 오전 12.12.38.png)
+
+그런데 여기에 어노테이션을 붙이면 어떻게 될까? 우리 회사에서 쓰는 테이블 네임 컨벤션은 소문자 & 카멜 케이스이기에 테이블 명을 `member`로 설정해봤다.
+
+```java
+@Entity
+@Table(name = "member")
+public class Member {
+
+    ...
+}
+```
+그러면 아래와 같이 소문자로 `create table member()` 쿼리가 날아가는 것을 볼 수 있다.
+
+![](../../../../../../../../스크린샷 2023-01-15 오전 12.12.59.png)
+
+
